Clean up code: make final, use Java 17 constructs, clean .toString() (#7031)